--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>practice</groupId>
   <artifactId>practice</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1</version>
   <packaging>war</packaging>
-  <name>practise</name>
+  <name>NewDev</name>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
